index.css matches correct beta version except for topnav grid, h1 still too small

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,4 @@
 body {
-  background: blue;
-  color: #00cc00;
-  font-size: x-large;
-}
-
-body {
   color: rgb(112, 205, 84);
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -43,6 +37,14 @@ img.logo {
   margin-bottom: 4%;
 }
 
+h1 {
+  font-family: 'Parisienne', cursive;
+  color: #f0940a;
+  font-size: 200%;
+  /* font-size: xx-large; */
+  text-align: center;
+}
+
 
 h3, p {
   padding: 14px;
@@ -56,19 +58,11 @@ img {
   border-radius: 20px;
 }
 
-/* h1 {
-  font-family: 'Parisienne', cursive;
-  color: #f0940a;
-  font-size: 400px;
-  text-align: justify;
-} */
-
 /*********************************************************/
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: rgb(40, 40, 40);
   overflow: hidden;
-
   display: grid;
   grid-template-columns: repeat(5, auto);
   list-style: none;
@@ -104,13 +98,6 @@ img {
   margin-right: auto;
   margin-left: auto;
 }
-
 /*******************************************/
 
-h1 {
-  font-family: 'Parisienne', cursive;
-  color: #f0940a;
-  font-size: 200%;
-  font-size: xx-large;
-  text-align: center;
-}
+
